--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chinchilla</title>
+    <title>Chinchilla hello</title>
   </head>
 
   <body>
-   <>
+   <something new>
   </body>
 </html>
